--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,11 +1,19 @@
 use_frameworks!
+platform :ios, '9.3'
 
 target 'FlatCreditCard_Example' do
-  pod 'FlatCreditCard', :path => '../'
-
-  target 'FlatCreditCard_Tests' do
-    inherit! :search_paths
-
+    pod 'FlatCreditCard', :path => '../'
     
-  end
+    target 'FlatCreditCard_Tests' do
+        inherit! :search_paths
+        
+    end
 end
+
+post_install do |installer|
+    installer.pods_project.build_configurations.each do |config|
+        config.build_settings.delete('CODE_SIGNING_ALLOWED')
+        config.build_settings.delete('CODE_SIGNING_REQUIRED')
+    end
+end
+
